@@ -1,5 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.3.0
+  
+  *) Make md5 hash files portable between EBCDIC and ASCII platforms  
+     [David Jones]
 
   *) Add limited apr_dbd_freetds driver (MSSQL and Sybase) [Nick Kew]
 
